# manage_skills

./: .gitignore  .skills.installed  .skills.list  README.md  ai.sh  init-env.sh  manage-skills.sh  manage-skills2.sh  pyproject.toml
conf/: skills.list  skills.yaml
conf/agents/: base.yaml  global.yaml
conf/agents/templates/: base-agent.yaml
docs/: CHANGELOG.md
docs/architecture/decisions/: ADR-0001-ide-local-skills-integration.md
environments/cursor/: cursorrules.template
